# kernel_tutorial

./: .gitignore  .gitmodules  0001-add-tcl-scripts.patch  BiscuitOs-workspace.code-workspace  README.md  RunBiscuitOS.sh  build_debian.sh  run_6_1_64.sh  run_next.sh  set_env.sh
configs/: .bashrc  .labconfig  .vimrc  config_env.sh  sources.list
configs/terminator/: config
linux-stable/: Kconfig  Makefile
project/qcom/user/lab1_hello/jni/: Android.bp  Android.mk  Application.mk  CMakeLists.txt  Makefile  hello.cpp
project/rockchip/: 20220910.patch  20220916.patch
project/shell/: dis_test.sh
project/tcl/: 1_hello.tcl  2_tcl_special_var.tcl  3_expr.tcl  README.md
robin_lab/: .gitignore  README.md
robin_lab/lab10_module/: Makefile  README  fdt.txt  modules.c  modules.h
robin_lab/lab12_offsetof/: Makefile  README  core.c
robin_lab/lab13_kthread/: Makefile  README.md  kthread_demo.c  kthread_led.c  kthread_plus.c  kthread流程分析.md
robin_lab/lab14_uevent/: README.md  main.c  uevent.c  uevent.h
robin_lab/lab15_memory_reordering/: Makefile  memory_barrier.c  memory_reordering.c
robin_lab/lab16_workqueue/: Makefile  README.md  tasklet_demo.c  workqueue_demo.c
robin_lab/lab17_timer/: Makefile  main.c  simple_timer_demo.c  timer_demo.c
robin_lab/lab18_poll/: Makefile  README.md  epoll_userspace.c  poll_driver_demo.c  poll_userspace.c  select_userspace.c
robin_lab/lab19_fifo/: Makefile  README.md  kfifo_demo.c
robin_lab/lab1_mmap/: mydev_mmap.c
robin_lab/lab20_procfs/: Makefile  main.c  procfs.c
tools/: calltrace-helper.sh  ftrace_on.sh  io  io.c
(+464 files in other folders)
